--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
 		"react-icons": "^3.5.0",
 		"react-lottie": "^1.2.3",
 		"react-reveal": "^1.2.2",
-		"react-simple-sidenav": "^1.0.1"
+		"react-simple-sidenav": "^1.0.1",
+		"react-spring": "^8.0.20"
 	},
 	"devDependencies": {
 		"prettier": "^1.16.4"
